# MacX-Releases

./: .gitignore  README.md  biome.json  index.html  installer.sh  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
cli/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
cli/src/: index.ts
cli/src/constants/: keybinds.ts  paths.ts  ports.ts
cli/src/interface/: comet.ts  createScript.ts  deleteScript.ts  executeScript.ts  listScripts.ts  logsViewer.ts
cli/src/services/: keyboardService.ts  logService.ts  scriptService.ts
cli/src/types/: keybinds.ts  logs.ts  menu.ts  script.ts
cli/src/utils/: file.ts  prompt.ts
docs/: autoExecute.md  commandPalette.md  documentation.md  fastFlags.md  info.md  keybinds.md  workspaces.md
public/: Icon.icns  MacX.icns
public/resources/: api.js  installer.sh
raycast/comet/: README.md  package.json
server/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vercel.json  vite.config.ts
server/api/: index.ts  package-lock.json  package.json  tsconfig.json
server/src/: App.tsx
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auto_execute.rs  execution_history.rs  fast_flags.rs  fast_flags_profiles.rs  flag_validator.rs  hydrogen.rs  main.rs  roblox_logs.rs  rscripts.rs  suggestions.rs  tabs.rs  updater.rs  workspace.rs
src/components/: library.tsx  robloxConsole.tsx  sidebar.tsx  statusBar.tsx  topbar.tsx  trafficLights.tsx  updater.tsx  workspaceSearch.tsx
src/utils/: cn.ts  suggestions.ts
(+161 files in other folders)
