[package]
name = "MacX"
version = "1.0.1"
description = "A modern and minimalistic interface for Hydrogen executor."
authors = ["YourName"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-all", "dialog-all", "window-all", "shell-open", "system-tray", "global-shortcut", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
tokio = { version = "1.0", features = ["full"] }
regex = "1.10.3"
notify="6.1"
sha2 = "0.10"
semver = "1.0.20"
futures-util = "0.3"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
